Fixed display issue where resume tabs were not aligned with rest of text

--- a/css/resume.css
+++ b/css/resume.css
@@ -6,7 +6,9 @@
 
 #resume li {
 	padding: 0.5em;
+	padding-left: 0;
 	margin: 0.5em;
+	margin-left: 0;
 }
 
 .resume-section-split {
